[gd_scene load_steps=2 format=3 uid="uid://bte1akycisd78"]

[ext_resource type="Script" uid="uid://b5u2vrxaiex0a" path="res://assets/Aquafulness/Scenes/Aquafulness/spinner.gd" id="1_r2axe"]

[node name="Spinner" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_r2axe")

[node name="ValueLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 35.0
offset_right = 81.0
offset_bottom = 102.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 48
text = "0"
horizontal_alignment = 2

[node name="PlusButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 11
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 81.0
offset_top = 35.0
offset_right = 119.0
offset_bottom = 66.0
grow_horizontal = 0
grow_vertical = 2
text = "+"
flat = true

[node name="MinusButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 11
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 81.0
offset_top = 77.0
offset_right = 119.0
offset_bottom = 108.0
grow_horizontal = 0
grow_vertical = 2
text = "-"

[node name="Label" type="Label" parent="."]
modulate = Color(1, 1, 1, 0.5019608)
layout_mode = 0
offset_right = 104.0
offset_bottom = 23.0
text = "Label"
uppercase = true

[connection signal="pressed" from="PlusButton" to="." method="_on_plus_button_pressed"]
[connection signal="pressed" from="MinusButton" to="." method="_on_minus_button_pressed"]
